--- a/index.html
+++ b/index.html
@@ -1,1 +1,248 @@
-el inicio de un buen negocio
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <title>KorexalTech</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#6CACFF',
+            secondary: '#85B4F2',
+            dark: '#1A2533',
+            darkCard: '#344153',
+            darkBorder: '#566273',
+            muted: '#8EACD2'
+          }
+        }
+      }
+    }
+  </script>
+
+  <!-- Lucide Icons -->
+  <script src="https://unpkg.com/lucide@latest"></script>
+</head>
+
+<body class="bg-dark text-white">
+
+<!-- NAV -->
+<nav class="fixed w-full z-50 bg-dark/80 backdrop-blur border-b border-darkBorder">
+  <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
+    <span class="text-xl font-bold">KorexalTech</span>
+    <div class="hidden md:flex gap-8 text-muted">
+      <a href="#servicios" class="hover:text-primary">Servicios</a>
+      <a href="#portafolio" class="hover:text-primary">Portafolio</a>
+      <a href="#equipo" class="hover:text-primary">Equipo</a>
+      <a href="#contacto" class="hover:text-primary">Contacto</a>
+    </div>
+    <button class="bg-primary px-6 py-2 rounded-lg hover:bg-secondary">Comenzar</button>
+  </div>
+</nav>
+
+<!-- HERO -->
+<section class="pt-32 pb-24 px-6">
+  <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-14 items-center">
+    <div>
+      <h1 class="text-5xl md:text-6xl font-bold mb-6 leading-tight">
+        Soluciones Tecnológicas Integrales para Empresas Modernas
+      </h1>
+      <p class="text-xl text-muted mb-8">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+
+      <div class="flex gap-4 flex-wrap">
+        <button class="bg-primary px-8 py-3 rounded-lg hover:bg-secondary flex items-center gap-2">
+          Solicitar Información <i data-lucide="arrow-right"></i>
+        </button>
+        <button class="border border-darkBorder px-8 py-3 rounded-lg text-muted hover:border-primary hover:text-primary">
+          Conocer Más
+        </button>
+      </div>
+    </div>
+
+    <div class="relative">
+      <div class="absolute inset-0 bg-gradient-to-r from-primary to-secondary blur-3xl opacity-20"></div>
+      <div class="relative bg-darkCard border border-darkBorder rounded-2xl p-10 flex justify-center">
+        <i data-lucide="cpu" class="text-primary" style="width:220px;height:220px;"></i>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- EMPRESAS -->
+<section class="py-20 bg-darkCard/30">
+  <div class="max-w-7xl mx-auto px-6 text-center">
+    <h2 class="text-3xl font-bold mb-4">Empresas que confían en nosotros</h2>
+    <p class="text-muted mb-10 max-w-3xl mx-auto">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.
+      Sed cursus ante dapibus diam.
+    </p>
+    <div class="grid grid-cols-2 md:grid-cols-5 gap-6 opacity-70">
+      <div class="bg-darkCard p-6 rounded">Empresa Lorem</div>
+      <div class="bg-darkCard p-6 rounded">Empresa Ipsum</div>
+      <div class="bg-darkCard p-6 rounded">Empresa Dolor</div>
+      <div class="bg-darkCard p-6 rounded">Empresa Sit</div>
+      <div class="bg-darkCard p-6 rounded">Empresa Amet</div>
+    </div>
+  </div>
+</section>
+
+<!-- SERVICIOS -->
+<section id="servicios" class="py-24 px-6">
+  <div class="max-w-7xl mx-auto">
+    <h2 class="text-4xl font-bold text-center mb-16">Nuestros Servicios</h2>
+
+    <div class="grid md:grid-cols-2 gap-10">
+      <div class="bg-darkCard p-8 rounded-xl border border-darkBorder">
+        <i data-lucide="globe" class="text-primary mb-4"></i>
+        <h3 class="text-2xl font-bold mb-4">Desarrollo Web Profesional</h3>
+        <p class="text-muted mb-4">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lacinia arcu eget nulla.
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra.
+        </p>
+        <p class="text-muted">
+          Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor.
+        </p>
+      </div>
+
+      <div class="bg-darkCard p-8 rounded-xl border border-darkBorder">
+        <i data-lucide="wrench" class="text-secondary mb-4"></i>
+        <h3 class="text-2xl font-bold mb-4">Mantenimiento y Soporte IT</h3>
+        <p class="text-muted mb-4">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus ante dapibus diam.
+          Sed nisi. Nulla quis sem at nibh elementum imperdiet.
+        </p>
+        <p class="text-muted">
+          Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- PROCESO -->
+<section class="py-24 bg-darkCard/30 px-6">
+  <div class="max-w-6xl mx-auto text-center mb-16">
+    <h2 class="text-4xl font-bold mb-4">Nuestro Proceso de Trabajo</h2>
+    <p class="text-muted max-w-3xl mx-auto">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent libero. Sed cursus ante dapibus diam.
+    </p>
+  </div>
+
+  <div class="grid md:grid-cols-4 gap-8 max-w-6xl mx-auto text-center">
+    <div>
+      <h3 class="text-primary text-4xl font-bold">01</h3>
+      <p class="mt-4 text-muted">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      </p>
+    </div>
+    <div>
+      <h3 class="text-primary text-4xl font-bold">02</h3>
+      <p class="mt-4 text-muted">
+        Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+    </div>
+    <div>
+      <h3 class="text-primary text-4xl font-bold">03</h3>
+      <p class="mt-4 text-muted">
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+      </p>
+    </div>
+    <div>
+      <h3 class="text-primary text-4xl font-bold">04</h3>
+      <p class="mt-4 text-muted">
+        Duis aute irure dolor in reprehenderit in voluptate velit.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- MÉTRICAS -->
+<section class="py-24 px-6">
+  <div class="max-w-6xl mx-auto grid md:grid-cols-4 gap-10 text-center">
+    <div>
+      <h3 class="text-4xl font-bold text-primary">+120</h3>
+      <p class="text-muted mt-2">
+        Proyectos completados exitosamente en diversos sectores empresariales.
+      </p>
+    </div>
+    <div>
+      <h3 class="text-4xl font-bold text-primary">+10</h3>
+      <p class="text-muted mt-2">
+        Años de experiencia ofreciendo soluciones tecnológicas confiables.
+      </p>
+    </div>
+    <div>
+      <h3 class="text-4xl font-bold text-primary">98%</h3>
+      <p class="text-muted mt-2">
+        Nivel de satisfacción reportado por nuestros clientes.
+      </p>
+    </div>
+    <div>
+      <h3 class="text-4xl font-bold text-primary">24/7</h3>
+      <p class="text-muted mt-2">
+        Disponibilidad continua de soporte técnico especializado.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- EQUIPO -->
+<section id="equipo" class="py-24 bg-darkCard/30 px-6">
+  <div class="max-w-4xl mx-auto text-center mb-16">
+    <h2 class="text-4xl font-bold mb-4">Nuestro Equipo</h2>
+    <p class="text-muted max-w-3xl mx-auto">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus ante dapibus diam.
+    </p>
+  </div>
+
+  <div class="grid md:grid-cols-2 gap-12 max-w-4xl mx-auto">
+    <div class="bg-darkCard p-8 rounded-xl border border-darkBorder text-center">
+      <i data-lucide="code-2" class="text-primary mb-4"></i>
+      <h3 class="font-bold text-lg">Profesional Lorem Ipsum</h3>
+      <p class="text-muted mt-2">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis sem at nibh elementum.
+      </p>
+    </div>
+
+    <div class="bg-darkCard p-8 rounded-xl border border-darkBorder text-center">
+      <i data-lucide="wrench" class="text-secondary mb-4"></i>
+      <h3 class="font-bold text-lg">Especialista Dolor Sit</h3>
+      <p class="text-muted mt-2">
+        Praesent mauris. Fusce nec tellus sed augue semper porta.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- CTA -->
+<section id="contacto" class="py-28 text-center bg-gradient-to-br from-darkCard to-dark px-6">
+  <h2 class="text-4xl font-bold mb-6">
+    ¿Listo para llevar tu empresa al siguiente nivel?
+  </h2>
+  <p class="text-muted max-w-3xl mx-auto mb-10">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minim veniam, quis nostrud exercitation.
+  </p>
+  <button class="bg-primary px-12 py-4 rounded-lg hover:bg-secondary text-lg">
+    Contáctanos
+  </button>
+</section>
+
+<!-- FOOTER -->
+<footer class="py-10 border-t border-darkBorder text-center text-muted px-6">
+  © 2024 KorexalTech. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+</footer>
+
+<script>
+  lucide.createIcons();
+</script>
+
+</body>
+</html>
