--- a/pagina-empresa/index.html
+++ b/pagina-empresa/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Korexal Tech | Desarrollo Web y Soluciones Tecnológicas</title>
+    <meta
+  name="description"
+  content="Korexal Tech ofrece desarrollo web, software a medida y soluciones tecnológicas modernas para negocios y emprendedores."
+/>
+
     <title>KorexalTech</title>
   </head>
   <body>
